# Clalculator_qml

./: .gitignore  CMakeLists.txt  Calculator.cpp  Calculator.h  README.md  calculator.pro  main.cpp  main.qml  resources.qrc
